# oMCRT

./: CMakeLists.txt  LICENSE  README.md  plot.py
cmake/: FindOptiX.cmake  configure_optix.cmake
ext/CMake/: FindGLFW.cmake  FindOptiX80.cmake  nvcuda_compile_module.cmake
ext/glfWindow/: GLFWindow.cpp  GLFWindow.h
src/: CMakeLists.txt  CUDABuffer.h  LaunchParams.h  SampleSimulation.cpp  SampleSimulation.h  devicePrograms.cu  io.cpp  io.hpp  main.cpp  model.cpp  model.h  opticalProperty.h  optix_helpers.h  optixclass.cpp  optixclass.h  random.cuh  render.cpp  render.h  rendererPrograms.cu  simulationPrograms.cu  window.h
